Misc Sonar and other code cleanup; use kiwi-test library